fix spacing issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,9 +37,10 @@ body {
     display: grid;
     grid-template-rows: auto 1fr;
     grid-row-gap: 1em;
-    // &_screen_1 {
-    // 	grid-row-gap: 1em;
-    // }
+
+    &_screen_0 {
+      grid-row-gap: 2em;
+    }
   }
 
   &__header {
@@ -61,8 +62,8 @@ body {
 
   &__logo-img {
     max-width: 250px;
-    margin-top: 35%;
-    margin-bottom: 10%;
+    // margin-top: 35%;
+    // margin-bottom: 10%;
   }
 
   &__screen-title {
@@ -78,6 +79,10 @@ body {
     display: grid;
     grid-row-gap: 1em;
     justify-content: center;
+
+    &_screen_0 {
+      grid-row-gap: 1.5em;
+    }
   }
 
   &__text {
